# finnhub_scraper

./: pyproject.toml
src/finnhub_scraper/: __main__.py  client.py  database.py  errors.py  models.py
